691291d4-6107-48be-b35d-a6f8be0894d0/force-app/main/default/objects/Opportunity/fields/OHT_Health_Score__c.field-meta.xml
<CustomField>
            <fullName>OHT_Health_Score__c</fullName>
            <label>Health Score</label>
            <description>Calculated opportunity health score (0-100) based on overdue tasks, last activity, close date proximity, and stage aging</description>
            <type>Number</type>
            <precision>3</precision>
            <scale>0</scale>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
        </CustomField>