691291d4-6107-48be-b35d-a6f8be0894d0/force-app/main/default/objects/Opportunity/fields/OHT_Health_Score_Last_Updated__c.field-meta.xml
<CustomField>
            <fullName>OHT_Health_Score_Last_Updated__c</fullName>
            <label>Health Score Last Updated</label>
            <description>Date and time when the health score was last calculated</description>
            <type>DateTime</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>