691291d4-6107-48be-b35d-a6f8be0894d0/force-app/main/default/objects/Opportunity/fields/OHT_Risk_Level__c.field-meta.xml
<CustomField>
            <fullName>OHT_Risk_Level__c</fullName>
            <label>Risk Level</label>
            <description>Risk level category based on health score: On Track (75-100), Needs Attention (50-74), At-Risk (0-49)</description>
            <type>Text</type>
            <length>20</length>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>