691291d4-6107-48be-b35d-a6f8be0894d0/force-app/main/default/objects/Opportunity/listViews/OHT_Opportunities_by_Health.listView-meta.xml
<ListView>
            <fullName>OHT_Opportunities_by_Health</fullName>
            <label>Opportunities by Health</label>
            <filterScope>Everything</filterScope>
            
            <columns>OPPORTUNITY.NAME</columns>
            
            <columns>ACCOUNT.NAME</columns>
            
            <columns>OPPORTUNITY.STAGE_NAME</columns>
            
            <columns>OPPORTUNITY.AMOUNT</columns>
            
            <columns>OPPORTUNITY.CLOSE_DATE</columns>
            
            <columns>OHT_Health_Score__c</columns>
            
            <columns>OHT_Risk_Level__c</columns>

        </ListView>